client/style/less/markup/menu.less
/*
 *
 * menu.less
 * ===============
 *  - Верстка меню первого и второго уровня
 *
*/

.menu
{
  .base(block, fixed);
  top: 0;
  left: 0;
  .size(20%, 100%);
  .text-select(none);

  &-checkbox {
    display: none;
  }

  &-open-button {
    display: none;
  }

  .logo
  {
    background: url(/client/img/logo.png) no-repeat;
    background-color: #fff;
    background-size: 100% 100%;
    display: block;
    width: 100%;
    min-height: 13rem;

    &:active
    {
      .resize(0.975);
    };

    &.active
    {
      .resize(1);
      cursor: default;
    };
  };

  .item
  {
    .base(block, relative);
    .size(100%, 8.5%);
    padding-top: 1%;             /* Делаем надпись посередине по вертикали */
    line-height: 1.9;
    cursor: pointer;
    font-size: 200%;
    font-weight: bold;
    text-align: center;
    color: @COLOR_WHITE;
    background: @COLOR_BLUE;
    .text-select(none);

    &:hover
    {
      color: @COLOR_WHITE;
      background: darken(@COLOR_BLUE, 10%);
    };

    &.active
    {
      color: @COLOR_BLUE;
      background: @COLOR_WHITE;
      cursor: default;

      &:hover
      {
        color: @COLOR_BLUE;
      };
      &:active
      {
        .resize(1);
      };
    };
  };
};

.menu-2
{
  position: absolute;
  display: block;
  width: auto !important;
  padding: 0 10px 10px !important;
  border: 1px solid @COLOR_GREY;
  border-top: none;
  background: @COLOR_WHITE;
  z-index: 1;

  .item-2
  {
    display: block;
    .smoothing(@COLOR_BLUE);

    &:hover
    {
      .smoothing(@COLOR_RED);
    }
  };
}

@media screen and (max-width: @MOBILE) {
  .menu {
    width: 80vw;
    left: -80vw;
    z-index: 2;
    -webkit-transition: left @TRANSITION_SPEED, -webkit-transform @TRANSITION_SPEED;
    transition: left @TRANSITION_SPEED, transform @TRANSITION_SPEED;

    &-open-button {
      display: block;
      position: fixed;
      top: 1rem;
      left: 1rem;
      z-index: 3;
      cursor: pointer;
      width: 2rem;
      height: 2rem;
      -webkit-transition: left @TRANSITION_SPEED, -webkit-transform @TRANSITION_SPEED;
      transition: left @TRANSITION_SPEED, transform @TRANSITION_SPEED;

      & svg {
        fill: @COLOR_BLUE;
      }
    }

    &-checkbox:checked~&-open-button {
      left: 80vw;
    }
    &-checkbox:checked~.menu {
      left: 0;
    }
  }
}

